--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <!-- footer -->
         <footer>
-            <h2>❤️ Made With Love by Run Buddy.</h2>
+            <h2>❤️ Made with Love by Run Buddy.</h2>
         </footer>
     </body>
 </html>
