--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
 <!-- navigation -->
         <header>
             <h1>
-                <a href="/">BUDDY
+                <a href="/">RUN BUDDY</a>
             </h1>
             <nav>
                 <ul>
