--- a/index.html
+++ b/index.html
@@ -32,25 +32,21 @@
 
 <!-- hero/jumbotron -->
         <section class="hero">
-            <div>
+            <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
             <!--Add form element-->
-            <form class="hero-form">
+            <form>
                 <label for="name">Enter full name:</label>
                 <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
-
                 <label for="email">Enter email address:</label>
                 <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
-
                 <label for="phone">Enter a telephone number:</label>
                 <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
-
                 <p>
                     Have you worked with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
                     <label for="trainer-yes">Yes</label>
-
                     <input type="radio" name="trainer-confirm" id="trainer-no" />
                     <label for="trainer-no">No</label>
 
@@ -106,8 +102,42 @@
         </section>
 
 <!-- "meet the trainers" section -->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem omnis temporibus, excepturi illo eligendi officia id! Nisi, animi architecto voluptatibus assumenda, ipsum voluptatem magnam blanditiis ratione eius explicabo iste ab.
+                    </p>
+                </div>
+            </article>
+
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis aut molestias veritatis iste harum necessitatibus dolor hic recusandae vero eaque dolorum aliquid quasi dignissimos excepturi, maxime, vel veniam velit quia.
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p> 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem fugit iure perspiciatis obcaecati dolorum! Nihil, fugit soluta voluptatibus veniam quod voluptate numquam veritatis nesciunt quae perspiciatis inventore, minima voluptates quo!
+                    </p>
+                </div>
+            </article>
         </section>
 
 <!-- "Reach Out" section -->
