--- a/index.html
+++ b/index.html
@@ -143,6 +143,30 @@
 <!-- "Reach Out" section -->
         <section>
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3401.5812494083125!2d-97.15560658455823!3d31.50819208137365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864f8168a01bdf2d%3A0x4ce12035f3229dab!2s2100%20S%20New%20Rd%2C%20Waco%2C%20TX%2076711!5e0!3m2!1sen!2sus!4v1616074341836!5m2!1sen!2sus" 
+                width="400" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="">
+                </iframe>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns befor signing up?
+                        <br />
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br />
+                        Some Town, Ca <br />
+                        12345 <br />
+                        P: 555.RUN.BUDZ (555.786.2839)<br />
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
+            </div>
         </section>
 
 <!-- footer -->
