--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         </section>
 
 <!-- "Reach Out" section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3401.5812494083125!2d-97.15560658455823!3d31.50819208137365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864f8168a01bdf2d%3A0x4ce12035f3229dab!2s2100%20S%20New%20Rd%2C%20Waco%2C%20TX%2076711!5e0!3m2!1sen!2sus!4v1616074341836!5m2!1sen!2sus" 
