--- a/index.html
+++ b/index.html
@@ -72,38 +72,72 @@
 
 <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>
-                Butcher selfies chambray chabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle Chillwave you probably have't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft   
-            </p>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    What We Do
+                </h2>
+            </div>
+            <div class="flex-row">
+                <p>
+                    Butcher selfies chambray chabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle Chillwave you probably have't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft   
+                </p>
+            </div>
         </section>
 
 <!-- "What You Do" section -->
         <section id="what-you-do" class="steps">
             <h2 class="section-title secondary-border">What You Do</h2>
             
-                <div>
-                    <img src="./assets/images/step-1.svg" alt="" />
-                    <h3>Step 1: <span>out the Form Above.</span></h3>
-                    <p>You're already here, so why not?</p>
+                <div class="step">
+                    <h3>Step 1.</h3>
+                    <div class="step-info">
+                        <div class="step-img">
+                            <img src="./assets/images/step-1.svg" alt="" />
+                        </div>
+                        <div class="step-text">
+                            <h4>Fill out the Form Above.</h4>
+                            <p>You're already here, so why not?</p>
+                        </div>
+                    </div>
                 </div>
 
-                <div>
-                    <img src="./assets/images/step-2.svg" alt="" />
-                    <h3>Step 2: <span>with One of Our trainers</span></h3>
-                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                <div class="step">
+                    <h3>Step 2.</h3>
+                    <div class="step-info">
+                        <div class="step-img">
+                            <img src="./assets/images/step-2.svg" alt="" />
+                        </div>
+                        <div class="step-text">
+                            <h4>Get with One of Our trainers</h4>
+                            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                        </div>
+                    </div>
                 </div>
 
-                <div>
-                    <img src="./assets/images/step-3.svg" alt="" />
-                    <h3>Step 3: <span>Get running</span></h3>
-                    <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                <div class="step">
+                    <h3>Step 3.</h3>
+                    <div class="step-info">
+                        <div class="step-img">
+                            <img src="./assets/images/step-3.svg" alt="" />
+                        </div>
+                        <div class="step-text">
+                            <h4>Get running</h4>
+                            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                        </div>
+                    </div>
                 </div>
 
-                <div>
-                    <img src="./assets/images/step-4.svg" alt="" />
-                    <h3>Step 4:<span>See Results.</span></h3>
-                    <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+                <div class="step">
+                    <h3>Step 4.</h3>
+                    <div class="step-info">
+                        <div class="step-img">
+                            <img src="./assets/images/step-4.svg" alt="" />
+                        </div>
+                        <div class="step-text">
+                            <h4>See Results</h4>
+                            <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+                        </div>
+                    </div>
                 </div>
         </section>
 
